--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
 window.onload = () => {
-  /*if ("serviceWorker" in navigator && document.URL.split(":")[0] !== "file") {
+  if ("serviceWorker" in navigator && document.URL.split(":")[0] !== "file") {
     navigator.serviceWorker.register("./sw.js");
-  }*/
+  }
   loadedPage();
 }
 
